# starspots

./: .gitignore  README.md  main.py  setup.cfg  setup.py
data/: light_curve.txt
notebooks/: lcfit.ipynb  starspot.ipynb
src/: __init__.py  oldfuncs.py  params.py  starspot.py  twospot.py
